fix: Ajuste gap tarjetas ayuda - Ficha Tramite V1

--- a/govco-pwa/src/app/tramites-pwa/components/ficha-especifica-cards-pwa/ficha-especifica-cards-pwa.component.scss
+++ b/govco-pwa/src/app/tramites-pwa/components/ficha-especifica-cards-pwa/ficha-especifica-cards-pwa.component.scss
@@ -1,7 +1,7 @@
 .cards-container{
     display: flex;
     justify-content: space-around;
-    gap: 14px;
+    gap: 8px;
     padding-left: 16px;
     padding-right: 16px;
 }
